# deepin-clone

./: .clog.toml  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  README.zh_CN.md  clonejob.cpp  clonejob.h  com.deepin.pkexec.deepin-clone.policy  com.deepin.pkexec.deepin-clone.policy.tmp  commandlineparser.cpp  common.pri  ddevicediskinfo.cpp  ddevicediskinfo.h  ddevicepartinfo.cpp  ddevicepartinfo.h  ddiskinfo.cpp  ddiskinfo.h  ddiskinfo_p.h  deepin-clone-pkexec  deepin-clone.desktop  deepin-clone.pro  deepin-ghost.pro  dfilediskinfo.cpp  dfilediskinfo.h  dfilepartinfo.cpp  dfilepartinfo.h  dglobal.h  dpartinfo.cpp  dpartinfo.h  dpartinfo_p.h  dvirtualimagefileengine.cpp  dvirtualimagefileengine.h  dvirtualimagefileio.cpp  dvirtualimagefileio.h  dzlibfile.cpp  dzlibfile.h  dzlibiodevice.cpp  dzlibiodevice.h  helper.cpp  (+5 more)
.reuse/: dep5
.tx/: config  deepin.conf  ts2desktop
.tx/deepin-clone.desktop/: am_ET_translation  ar_translation  ast_translation  bg_translation  bn_translation  ca_translation  cs_translation  da_translation  de_translation  es_419_translation  es_translation  fa_translation  fi_translation  fr_translation  gl_ES_translation  hu_translation  id_translation  it_translation  ja_translation  lt_translation  ms_translation  nl_translation  pl_translation  pt_BR_translation  pt_translation  ro_translation  ru_translation  sk_translation  sl_translation  tr_translation  uk_translation  zh_CN_translation  zh_TW_translation
app/: com.deepin.pkexec.deepin-clone.policy.tmp  deepin-clone-app.pro  deepin-clone-ionice  deepin-clone.desktop  translate_ts2desktop.sh
app/icons/: loading@1x.mov  loading@2x.mov
app/mimetype/: deepin-clone.xml
app/src/: commandlineparser.cpp  commandlineparser.h  dglobal.h  main.cpp
app/src/corelib/: clonejob.cpp  clonejob.h  ddevicediskinfo.cpp  ddevicediskinfo.h  ddevicepartinfo.cpp  ddevicepartinfo.h  ddiskinfo.cpp  ddiskinfo.h  ddiskinfo_p.h  dfilediskinfo.cpp  dfilediskinfo.h  dpartinfo.cpp  dpartinfo.h  dpartinfo_p.h  dvirtualimagefileengine.cpp  dvirtualimagefileengine.h  dvirtualimagefileio.cpp  dvirtualimagefileio.h  dzlibfile.cpp  dzlibfile.h  dzlibiodevice.cpp  dzlibiodevice.h  helper.cpp  helper.h
app/src/fixboot/: bootdoctor.cpp  bootdoctor.h  fixboot.pri  repo_x86_64.iso  scripts.qrc
app/src/widgets/: contentpairpage.cpp  contentpairpage.h  disklistitem.cpp  disklistitem.h  endpage.cpp  endpage.h  iconlabel.cpp  iconlabel.h  mainwindow.cpp  mainwindow.h  partitionlistitem.cpp  partitionlistitem.h  selectactionpage.cpp  selectactionpage.h  selectfilepage.cpp  selectfilepage.h  utilitylist.cpp  utilitylist.h  utilitylistdeviceitem.cpp  utilitylistdeviceitem.h  utilitylistitem.cpp  utilitylistitem.h  viewbox.cpp  viewbox.h  widgets.pri  workingpage.cpp  workingpage.h
app/translations/: deepin-clone.ts  deepin-clone_am_ET.ts  deepin-clone_ar.ts  deepin-clone_ast.ts  deepin-clone_bg.ts  deepin-clone_bn.ts  deepin-clone_ca.ts  deepin-clone_cs.ts  deepin-clone_da.ts  deepin-clone_de.ts  deepin-clone_el.ts  deepin-clone_es.ts  deepin-clone_es_419.ts  deepin-clone_et.ts  deepin-clone_fa.ts  deepin-clone_fi.ts  deepin-clone_fr.ts  deepin-clone_gl_ES.ts  deepin-clone_hr.ts  deepin-clone_hu.ts  deepin-clone_id.ts  deepin-clone_it.ts  deepin-clone_ja.ts  deepin-clone_ko.ts  deepin-clone_lt.ts  deepin-clone_ml.ts  deepin-clone_mn.ts  deepin-clone_ms.ts  deepin-clone_nb.ts  deepin-clone_nl.ts  deepin-clone_pl.ts  deepin-clone_pt.ts  deepin-clone_pt_BR.ts  deepin-clone_ro.ts  deepin-clone_ru.ts  deepin-clone_sk.ts  deepin-clone_sl.ts  deepin-clone_sq.ts  deepin-clone_sr.ts  deepin-clone_tr.ts  (+40 more)
app/translations/desktop/: desktop.ts  desktop_am_ET.ts  desktop_ar.ts  desktop_ast.ts  desktop_bg.ts  desktop_bn.ts  desktop_ca.ts  desktop_cs.ts  desktop_da.ts  desktop_de.ts  desktop_el.ts  desktop_es.ts  desktop_es_419.ts  desktop_et.ts  desktop_fa.ts  desktop_fi.ts  desktop_fr.ts  desktop_gl_ES.ts  desktop_hr.ts  desktop_hu.ts  (+22 more)
config.tests/dfm-plugin/: dfm-plugin.pro  main.cpp
debian/: changelog  control  copyright  rules
dfm_plugin/: dfm-plugin-dim-file.json  dfm_plugin.pro  dimfilecontroller.cpp  dimfilecontroller.h  dimfileinfo.cpp  dimfileinfo.h  main.cpp
honest_child/: honest_child.pro  main.cpp
mimetype/: deepin-clone.xml
src/: commandlineparser.cpp  commandlineparser.h  dglobal.h  main.cpp
src/corelib/: clonejob.cpp  clonejob.h  corelib.pri  ddevicediskinfo.cpp  ddevicediskinfo.h  ddevicepartinfo.cpp  ddevicepartinfo.h  ddiskinfo.cpp  ddiskinfo.h  ddiskinfo_p.h  dfilediskinfo.cpp  dfilediskinfo.h  dpartinfo.cpp  dpartinfo.h  dpartinfo_p.h  dvirtualimagefileengine.cpp  dvirtualimagefileengine.h  dvirtualimagefileio.cpp  dvirtualimagefileio.h  dzlibfile.cpp  dzlibiodevice.cpp  dzlibiodevice.h  helper.cpp  helper.h
src/fixboot/: bootdoctor.cpp  bootdoctor.h  repos.qrc
src/widgets/: contentpairpage.cpp  contentpairpage.h  disklistitem.cpp  disklistitem.h  endpage.cpp  endpage.h  iconlabel.cpp  iconlabel.h  mainwindow.cpp  mainwindow.h  partitionlistitem.cpp  partitionlistitem.h  qss.qrc  selectactionpage.cpp  selectactionpage.h  selectfilepage.cpp  selectfilepage.h  utilitylist.cpp  utilitylist.h  utilitylistdeviceitem.cpp  utilitylistdeviceitem.h  utilitylistitem.cpp  utilitylistitem.h  viewbox.cpp  viewbox.h  widgets.pri  workingpage.cpp  workingpage.h
translations/: deepin-clone.ts  deepin-clone_am_ET.ts  deepin-clone_ar.ts  deepin-clone_ast.ts  deepin-clone_bg.ts  deepin-clone_ca.ts  deepin-clone_cs.ts  deepin-clone_da.ts  deepin-clone_de.ts  deepin-clone_es.ts  deepin-clone_es_419.ts  deepin-clone_fr.ts  deepin-clone_hr.ts  deepin-clone_hu.ts  deepin-clone_ja.ts  deepin-clone_lt.ts  deepin-clone_ms.ts  deepin-clone_nl.ts  deepin-clone_pl.ts  deepin-clone_pt.ts  deepin-clone_pt_BR.ts  deepin-clone_sk.ts  deepin-clone_sl.ts  deepin-clone_uk.ts  deepin-clone_zh_CN.ts  deepin-clone_zh_TW.ts  policy.ts  policy_am_ET.ts  policy_ar.ts  policy_ast.ts  policy_cs.ts  policy_da.ts  policy_de.ts  policy_es_419.ts  policy_fr.ts  policy_hu.ts  policy_it.ts  policy_ms.ts  policy_pt.ts  policy_ro.ts  (+2 more)
(+7 files in other folders)
